crates/uitest/fixtures/ty/def/trait_impl_signature_admission_cycle.snap
---
source: crates/uitest/tests/ty.rs
assertion_line: 27
expression: diags
input_file: fixtures/ty/def/trait_impl_signature_admission_cycle.fe
---
error[2-0010]: no method named `encoder_new` found for struct `Sol`
   ┌─ trait_impl_signature_admission_cycle.fe:35:20
   │
35 │     let enc = Sol::encoder_new()
   │                    ^^^^^^^^^^^ method not found in `Sol`

error[6-0003]: trait bound is not satisfied
   ┌─ trait_impl_signature_admission_cycle.fe:19:20
   │
19 │     type Encoder = SolEncoder
   │                    ^^^^^^^^^^ `SolEncoder` doesn't implement `AbiEncoder<Sol>`

error[6-0003]: trait bound is not satisfied
   ┌─ trait_impl_signature_admission_cycle.fe:30:6
   │
30 │ impl AbiEncoder<Sol> for SolEncoder {
   │      ^^^^^^^^^^^^^^^ `Sol` doesn't implement `Abi`
